--- a/mybatis_anno/pom.xml
+++ b/mybatis_anno/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.xiaofeng</groupId>
-    <artifactId>mybatis_config</artifactId>
+    <artifactId>mybatis_anno</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -44,6 +44,12 @@
             <groupId>com.github.jsqlparser</groupId>
             <artifactId>jsqlparser</artifactId>
             <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
