新增本地数据库配置

--- a/mybatis_anno/src/main/resources/jdbc.properties
+++ b/mybatis_anno/src/main/resources/jdbc.properties
@@ -1,4 +1,9 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.50.95:3306/lyx_db_1
-jdbc.username=qp_2020_dev_user
-jdbc.password=qp_2020_dev_user123
+# 卓讯开发服
+#jdbc.url=jdbc:mysql://192.168.50.95:3306/lyx_db_1
+#jdbc.username=qp_2020_dev_user
+#jdbc.password=qp_2020_dev_user123
+# 本地数据库
+jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.username=root
+jdbc.password=mysql321
