--- a/spring_tx_anno/pom.xml
+++ b/spring_tx_anno/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.xiaofeng</groupId>
-    <artifactId>spring_tx</artifactId>
+    <artifactId>spring_tx_anno</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
